--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <script src="js/javascript.js"></script>
 </head>
 <body>
     <h1>Hola Curso Git ADSI</h1>
+    <input type="button" onclick="saludo()" value="Dale ya!">
 </body>
 </html>
