Continuacion curso Git

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/javascript.js"></script>
 </head>
 <body>
-    <h1>Hola Curso Git ADSI</h1>
+    <h1>Hola Curso Git ADSI Continuando con el curso</h1>
     <input type="button" onclick="saludo()" value="Dale ya!">
 </body>
 </html>
