Se agregor parrafo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>Hola Curso Git ADSI Continuando con el curso</h1>
+    <h2>Que bueno es programar</h2>
+    <p>lorem ipsum dolor sit amet, consectet</p>
     <input type="button" onclick="saludo()" value="Dale ya!">
 </body>
 </html>
